@@ -36,6 +36,9 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.4</version>
+                <configuration>
+                    <argLine>--add-exports java.base/sun.nio.ch=net.openhft.hashing</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
